<package>
  <name>visual_pose_estimation</name>
  <version>1.0.21</version>
  <description>visual_pose_estimation</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>


  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <url type="website">http://ros.org/wiki/visual_pose_estimation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Patrick Mihelich</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>image_geometry</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lvisual_pose_estimation" cflags="-I${prefix}/include"/>
</export>

</package>

